Add other component, use of vue router

--- a/vue-ts/src/components/vertical-menu/template.html
+++ b/vue-ts/src/components/vertical-menu/template.html
@@ -2,8 +2,8 @@
     <div class="item">
         <div class="header">Products</div>
         <div class="menu">
-            <a class="item">Enterprise</a>
-            <a class="item">Consumer</a>
+            <router-link class="item" to="/enterprise">Enterprise</router-link>
+            <router-link class="item" to="/consumer">Consumer</router-link>
         </div>
     </div>
     <div class="item">
